kubernetes/apps/home/file-management/syncthing/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: syncthing
spec:
  description: "Network policy for Syncthing"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
    # Allow syncthing peer connections
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "22000"
              protocol: TCP
            - port: "21027"
              protocol: UDP
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow syncthing peer connections
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "22000"
              protocol: TCP
            - port: "21027"
              protocol: UDP
            - port: "443"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
